# skypydb

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  dprint.json  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_mem0.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: prettier.yml  python-publish.yml  release_backend_container.yml  release_dashboard_container.yml  release_npm.yml  release_pypi.yml  release_rust.yml  rust-backend-ci.yml  rust-publish.yml  vouch.yml
apps/dashboard/: README.md  package.json
apps/docs/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docs.json  docusaurus.config.ts  package.json  sidebars.js
apps/eu-dashboard/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cloudflare-env.d.ts  package.json  wrangler.jsonc
apps/mesosphere-dashboard/: package.json
apps/mesosphere-self-hosted-dashboard/: package.json
apps/self-hosted-dashboard/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.json
apps/us-dashboard/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  cloudflare-env.d.ts  package-lock.json  package.json  wrangler.jsonc
dashboard/: README.md  package-lock.json  package.json
demo/examples/: README.md
demo/integration/: README.md
deployment/: README.md
deployment/google/: README.md  cloudrun-service.yaml  skypydb.cf.json
deployment/local/: docker-compose.yml
deployments/: README.md
deployments/google/: .env.example  README.md  cloudrun-service.yaml  docker-compose.yml  mesosphere.cf.json
deployments/local/: docker-compose.yml
docker/: README.md
docker/self-hosted/: README.md
docs/: docs.json
docs/cli/: overview.mdx
docs/getting-started/: getting_started.mdx
docs/reactiveclient/: add.mdx  delete.mdx  encryption.mdx  get.mdx  schema.mdx
docs/vectorclient/: add.mdx  delete.mdx  query.mdx
examples/: README.md
examples/basic_implementation/: example.py  example_add.py  example_delete.py  example_search.py  example_with_a_custom_config.py  example_without_a_custom_config.py  schema.py
examples/secure_implementation/: generate_key.py  secure_example.py
examples/vector_implementation/: example_vector.py
httpclients/: README.md
httpclients/js/: README.md
httpclients/python/: README.md
i18n/: README.ar.md  README.bg.md  README.bn.md  README.ca.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.et.md  README.fa.md  README.fi.md  README.fr.md  README.gu.md  README.he.md  README.hi.md  README.hr.md  README.hu.md  README.id.md  README.it.md  README.jp.md  README.ko.md  README.lt.md  README.lv.md  README.ms.md  README.nb.md  README.ne.md  README.nl.md  README.pl.md  README.pt-br.md  README.pt.md  README.ro.md  README.ru.md  README.si.md  README.sk.md  README.sl.md  README.sq.md  README.sr.md  README.sv.md  README.ta.md  (+7 more)
mem0/vector_stores/: skypydb.py
mesosphere/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  errors.py
mesosphere-js/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
mesosphere-js/src/: index.ts  (+1 more)
mesosphere-rs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
mesosphere-tests/: README.md
relationaldbex/: README.md  mutation.ts  query.ts  schemas.ts  usage.ts
rust/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  main.rs
rust/application/: Cargo.toml
rust/application/src/: config.rs  lib.rs  state.rs
rust/authentication/: Cargo.toml
rust/authentication/src/: lib.rs
rust/common/: Cargo.toml
rust/common/src/: lib.rs  openapi.rs  query.rs
rust/common/src/api/: envelope.rs  mod.rs
rust/common/src/contracts/: field_types.rs  mod.rs
rust/common/src/middleware/: mod.rs  request_id.rs
rust/common/src/schema/: mod.rs  signature.rs  types.rs
rust/database/: Cargo.toml
rust/database/src/: lib.rs  query_builder.rs
rust/db_connection/: Cargo.toml
rust/db_connection/src/: lib.rs
rust/errors/: Cargo.toml
rust/errors/src/: lib.rs
rust/examples/basic_implementation/: example_add.rs  example_delete.rs  example_search.rs  schema.rs
rust/examples/secure_implementation/: .env.local.example  generate_key.rs  secure_example.rs
rust/examples/vector_implementation/: example_vector_ollama.rs  example_vector_openai.rs  example_vector_sentence_transformers.rs
rust/file_storage/: Cargo.toml
rust/file_storage/src/: lib.rs
rust/google_cloud_utils/: Cargo.toml
rust/google_cloud_utils/src/: lib.rs
rust/health_check/: Cargo.toml
rust/health_check/src/: lib.rs
rust/metrics/: Cargo.toml
rust/metrics/src/: lib.rs
rust/mysql/: Cargo.toml
rust/mysql/src/: lib.rs
rust/relational/: Cargo.toml
rust/relational/src/: lib.rs
rust/relational/src/api_models/: functions.rs  mod.rs  relational.rs  schema.rs  storage.rs
rust/relational/src/domain/: mod.rs
rust/relational/src/domain/relational/: mod.rs  query_planner.rs  validator.rs  where_clause.rs
rust/relational/src/domain/schema/: mod.rs  planner.rs
rust/relational/src/functions/: executor.rs  manifest.rs  mod.rs
rust/relational/src/repositories/: mod.rs  relational_repo.rs  schema_repo.rs
rust/relational/src/routes/: admin_schema.rs  functions.rs  mod.rs  relational.rs  storage.rs
rust/src/: lib.rs
rust/src/cli/: mod.rs
rust/src/clients/: mod.rs
rust/src/database_linker/: mod.rs
rust/src/embeddings/: mod.rs
rust/src/errors/: mod.rs
rust/src/reactive/: mod.rs
rust/src/schema/: mod.rs
rust/src/security/: mod.rs
rust/src/server/: mod.rs
rust/src/server/dashboard_api/: mod.rs
rust/src/server/http_server/: mod.rs
rust/src/table/: mod.rs
rust/src/vector/: mod.rs
rust/telemetry/: Cargo.toml
rust/telemetry/src/: lib.rs
rust/tests/: integration_mysql.rs
rust/vector/: Cargo.toml
rust/vector/src/: api_models.rs  codec.rs  lib.rs  repository.rs  routes.rs  scoring.rs
schemas/: README.md
skypydb/: README.md  __init__.py  errors.py  http_client.py
skypydb-js/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
(+895 files in other folders)
