[workspace]
members = [
    "rust",
    "rust/authentication",
    "rust/application",
    "rust/common",
    "rust/database",
    "rust/db_connection",
    "rust/errors",
    "rust/file_storage",
    "rust/google_cloud_utils",
    "rust/health_check",
    "rust/metrics",
    "rust/mysql",
    "rust/relational",
    "rust/telemetry",
    "rust/vector",
    "demo/examples/rust/tutorials/note_taker",
    "demo/examples/rust/tutorials/vector_examples",
    "mesosphere-rs",
]
resolver = "2"
