[project]
name = "skypydb"
version = "1.0.3"
authors = [{name = "Ahen Studio"}]
description = "Open Source Reactive Database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "cryptography>=46.0.4",
    "python-dotenv>=0.21.1",
    "typer>=0.22.0",
    "questionary>=2.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=5.2.2"
]

[project.scripts]
skypydb = "skypydb.cli.cli:main"

[project.optional-dependencies]
mem0 = [ "mem0ai>=2.20.0" ]

[project.urls]
"Homepage" = "https://github.com/Ahen-Studio/skypydb"
"Bug Tracker" = "https://github.com/Ahen-Studio/skypydb/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skypydb*"]
exclude = ["mem0*"]
