[project]
name = "skypydb"
version = "1.0.3"
authors = [{name = "Ahen Studio"}]
description = "Open Source Vector Embeddings Database"
readme = "README.md"
license = "Apache"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "sentence-transformers[onnx]>=5.2.2"
]

[project.optional-dependencies]
mem0 = [ "mem0ai>=2.20.0" ]

[project.urls]
"Homepage" = "https://github.com/Ahen-Studio/skypydb"
"Bug Tracker" = "https://github.com/Ahen-Studio/skypydb/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skypydb*"]
exclude = ["mem0*"]
