[project]
name = "mesosphere"
version = "2.0.0"
authors = [{name = "Ahen Studio"}]
description = "Open Source Relational and Vector Embeddings Database"
readme = "README.md"
license = "Apache"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "httpx>=0.28.1",
    "sentence-transformers[onnx]>=5.2.3"
]

[project.optional-dependencies]
mem0 = [ "mem0ai>=2.20.0" ]

[project.urls]
"Homepage" = "https://github.com/Ahen-Studio/mesosphere-backend"
"Bug Tracker" = "https://github.com/Ahen-Studio/mesosphere-backend/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mesosphere"]
