[package]
name = "skypydb"
version = "1.0.2"
edition = "2021"
description = "Rust port of the skypydb reactive and vector database client"
repository = "https://github.com/Ahen-Studio/skypydb"
license = "MIT"
exclude = [
    "examples/**",
]

[dependencies]
dotenv = "0.15"
aes-gcm = "0.10"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
hex = "0.4"
once_cell = "1"
pbkdf2 = "0.12"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = "2"

[dev-dependencies]
dotenv = "0.15"
tempfile = "3"