[package]
name = "skypydb"
version = "1.0.3"
edition = "2021"
description = "Rust backend for Skypydb relational and vector APIs"
repository = "https://github.com/Ahen-Studio/skypydb"
license = "Apache-2.0"
exclude = [
    "examples/**",
]

[[bin]]
name = "skypydb"
path = "main.rs"

[dependencies]
skypydb-application = { path = "./application" }
skypydb-authentication = { path = "./authentication" }
skypydb-common = { path = "./common" }
skypydb-database = { path = "./database" }
skypydb-db-connection = { path = "./db_connection" }
skypydb-errors = { path = "./errors" }
skypydb-file-storage = { path = "./file_storage" }
skypydb-health-check = { path = "./health_check" }
skypydb-metrics = { path = "./metrics" }
skypydb-mysql = { path = "./mysql" }
skypydb-relational = { path = "./relational" }
skypydb-telemetry = { path = "./telemetry" }
skypydb-vector = { path = "./vector" }

dotenv = "0.15"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
