[package]
name = "mesosphere"
version = "2.0.0"
edition = "2021"
description = "Rust backend for Mesosphere relational and vector APIs"
repository = "https://github.com/Ahen-Studio/mesosphere-backend"
license = "Apache-2.0"

[[bin]]
name = "mesosphere"
path = "main.rs"

[dependencies]
mesosphere-application = { path = "./application" }
mesosphere-authentication = { path = "./authentication" }
mesosphere-common = { path = "./common" }
mesosphere-database = { path = "./database" }
mesosphere-db-connection = { path = "./db_connection" }
mesosphere-errors = { path = "./errors" }
mesosphere-file-storage = { path = "./file_storage" }
mesosphere-health-check = { path = "./health_check" }
mesosphere-metrics = { path = "./metrics" }
mesosphere-mysql = { path = "./mysql" }
mesosphere-relational = { path = "./relational" }
mesosphere-telemetry = { path = "./telemetry" }
mesosphere-vector = { path = "./vector" }

dotenv = "0.15"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
