[package]
name = "mesosphere-authentication"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
mesosphere-application = { path = "../application" }
mesosphere-errors = { path = "../errors" }

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
