[package]
name = "mesosphere-common"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
mesosphere-errors = { path = "../errors" }
mesosphere-database = { path = "../database" }
