[package]
name = "skypydb-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
skypydb-errors = { path = "../errors" }
skypydb-google-cloud-utils = { path = "../google_cloud_utils" }
