[package]
name = "skypydb-relational"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["mysql", "chrono", "json"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["fs"] }
skypydb-application = { path = "../application" }
skypydb-common = { path = "../common" }
skypydb-database = { path = "../database" }
skypydb-errors = { path = "../errors" }
