[package]
name = "skypydb-vector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["mysql", "chrono", "json", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
skypydb-application = { path = "../application" }
skypydb-common = { path = "../common" }
skypydb-errors = { path = "../errors" }
