[package]
name = "mesosphere-vector"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["mysql", "chrono", "json", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
mesosphere-application = { path = "../application" }
mesosphere-common = { path = "../common" }
mesosphere-errors = { path = "../errors" }
